# 2A202600398_NguyenLeMinhLuan_Lab26

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: client-integration-codex.md  demo-transcript.md
docs/screenshots/: 12-codex-client-integration.html  README.md
examples/: claude.mcp.json  codex-config.toml  gemini-settings.json
implementation/: auth.py  db.py  init_db.py  mcp_server.py  start_inspector.sh  verify_server.py
implementation/tests/: test_bonus.py  test_db.py  test_mcp_server.py
